# CMCourier

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMCOURIER_REBIRTH.md  CONTRIBUTING.md  ClaseDocumentalCM.csv  MetadatosCM.csv  README.md  RVILIB_RVABREP.xlsx  metadata_clients.csv  pyproject.toml
.atl/: skill-registry.md
.specify/memory/: constitution.md
docs/: INDEX.md  ONBOARDING.md
docs/adr/: 001-hexagonal-architecture.md  002-sqlite-tracking-store.md  003-streaming-mode.md  004-aimd-auto-tune.md  005-processpool-for-s4.md  006-heavy-light-lanes.md  007-csv-trigger-primary-source.md  008-textual-tui.md  README.md
docs/contributing/: README.md  code-style.md  spec-driven-flow.md  testing-philosophy.md
docs/diagrams/: README.md  file-imports-map.md  hexagonal-layers.md  s0-s7-flow.md  state-machine.md  streaming-pipeline.md
docs/domain/: CMCOURIER_REBIRTH.md
docs/explanation/: README.md  aimd-auto-tuning.md  architecture-overview.md  bandwidth-honesty.md  heavy-light-lanes.md  http2-multiplexing.md  idempotency-and-retries.md  pii-handling.md  pipeline-stages.md  processpool-for-pdf-assembly.md  streaming-vs-batched.md  the-bucket-pattern.md  windows-vs-linux.md
docs/how-to/: README.md  as400-sync.md  cmis-target-preflight.md  document-cache.md  heavy-light-lanes.md  local-staging-simulation.md  log-analysis.md  mock-rvabrep-generator.md  multi-batch.md  staging-dry-run.md  validation-checklist.md
docs/reference/: README.md  cli.md  config-schema.md  error-codes.md  glossary.md  observability-fields.md  tracking-db-schema.md  tui-keybindings.md
docs/roadmap/: POST-MVP.md
docs/runbooks/: README.md  as400-down.md  cmis-down.md  disk-full-during-prep.md  migration-stuck-no-progress.md  tracking-db-locked.md
docs/samples/: config-reference.yaml
docs/tutorials/: 00-getting-started.md  01-the-yaml-config.md  02-pipelines-and-how-to-use-them.md  03-execution-modes-batched-vs-streaming.md  04-all-commands-tour.md  05-doctor-deep-dive.md  06-first-streaming-run.md  07-debugging-a-failed-batch.md  README.md
reference-data/csv/: MetadatosCM.csv  TriggerExample.csv  metadata_cards.csv  metadata_dates.csv
scripts/hooks/: no-co-authored-by.sh
scripts/staging/: README.md  alfresco-compose.yml  cmcourier-model.xml  config-staging.yaml.template  generate-keystore.sh  register-model.sh  throughput-bench.sh
specs/001-bootstrap-python-skeleton/: plan.md  spec.md  tasks.md
specs/002-domain-models-and-ports/: plan.md  spec.md  tasks.md
specs/003-tabular-data-source-adapter/: plan.md  spec.md  tasks.md
specs/004-mapping-service/: plan.md  spec.md  tasks.md
specs/005-metadata-service/: plan.md  spec.md  tasks.md
specs/006-trigger-service/: plan.md  spec.md  tasks.md
specs/007-sqlite-tracking-store/: plan.md  spec.md  tasks.md
specs/008-indexing-service/: plan.md  spec.md  tasks.md
specs/009-pdf-assembly-adapter/: plan.md  spec.md  tasks.md
specs/010-cmis-upload-adapter/: plan.md  spec.md  tasks.md
specs/011-csv-trigger-pipeline/: plan.md  spec.md  tasks.md
specs/012-cli-config/: plan.md  spec.md  tasks.md
specs/013-doctor/: plan.md  spec.md  tasks.md
specs/014-as400-pipelines/: plan.md  spec.md  tasks.md
specs/015-as400-metadata-source/: plan.md  spec.md  tasks.md
specs/016-local-scan-pipeline/: plan.md  spec.md  tasks.md
specs/017-single-doc-pipeline/: plan.md  spec.md  tasks.md
specs/018-per-field-as400-query/: plan.md  spec.md  tasks.md
specs/019-port-hygiene/: plan.md  spec.md  tasks.md
specs/020-observability-tiers/: plan.md  spec.md  tasks.md
specs/021-cli-tree-essentials/: plan.md  spec.md  tasks.md
specs/022-pipeline-safety-flags/: plan.md  spec.md  tasks.md
specs/023-complete-cli-menus/: plan.md  spec.md  tasks.md
specs/024-background-runner/: plan.md  spec.md  tasks.md
specs/025-tui-workers-autotune/: plan.md  spec.md  tasks.md
specs/026-system-metrics-tier5/: plan.md  spec.md  (+1 more)
tests/: conftest.py  test_smoke.py
(+392 files in other folders)
